# era-zkevm_test_harness

./: Cargo.toml
.github/workflows/: ci.yaml
circuit_definitions/: Cargo.toml
circuit_definitions/src/circuit_definitions/: verifier_builder.rs
circuit_definitions/src/circuit_definitions/aux_layer/: compression.rs
circuit_definitions/src/circuit_definitions/aux_layer/compression_modes/: mod.rs
circuit_definitions/src/circuit_definitions/base_layer/: log_demux.rs  mod.rs  modexp.rs
circuit_definitions/src/circuit_definitions/recursion_layer/: mod.rs  node_layer.rs  recursion_tip.rs  scheduler.rs
circuit_encodings/: Cargo.toml
circuit_sequencer_api/: Cargo.toml
circuit_sequencer_api/src/: geometry_config.rs  toolset.rs
kzg/: Cargo.toml
setup/base_layer/: finalization_hint_1.json  vk_1.json
setup/recursion_layer/: finalization_hint_1.json  vk_1.json  vk_recursion_tip.json
src/: capacity_estimator.rs  compute_setups.rs  debug.rs  external_calls.rs  lib.rs  prover_utils.rs  run.rs  run_vms.rs  toolset.rs
src/data_source/: in_memory_data_source.rs  local_file_data_source.rs  mod.rs
src/geometry_config_generator/: main.rs
src/proof_compression/: mod.rs
src/proof_wrapper_utils/: mod.rs  wrapper.rs
src/snark_wrapper_test/: mod.rs
src/tests/: mod.rs  run_manually.rs
src/tests/complex_tests/: invididual_debugs.rs  mod.rs  test_synthesis.rs  testing_wrapper.rs  utils.rs  wrapper_negative_tests.rs
src/tests/simple_tests/: README.md  asm_tests.rs  context.rs  far_calls.rs  fat_pointer_erasure.rs  limited_ergs.rs  log.rs  mod.rs  near_call.rs  ptr.rs  ptr_add.rs  storage.rs
src/tests/simple_tests/testdata/decommit_ok/: entry.asm
src/tests/simple_tests/testdata/decommit_ok_with_panic/: entry.asm
src/tests/simple_tests/testdata/log_precompile/: entry.asm
src/tests/simple_tests/testdata/meta_opcode/: entry.asm
src/tests/utils/: preprocess_asm.rs  testing_tracer.rs
src/witness/: advancing_range.rs  full_block_artifact.rs  mod.rs  oracle.rs  recursive_aggregation.rs  tracer.rs  utils.rs
src/witness/individual_circuits/: data_hasher_and_merklizer.rs  decommit_code.rs  ecadd.rs  ecmul.rs  ecpairing.rs  ecrecover.rs  events_sort_dedup.rs  keccak256_round_function.rs  log_demux.rs  mod.rs  modexp.rs  ram_permutation.rs  sha256_round_function.rs  sort_decommit_requests.rs  storage_application.rs  storage_sort_dedup.rs  transient_storage_sorter.rs
src/witness/postprocessing/: mod.rs
