[package]
name = "circuit_definitions"
version = "1.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snark_wrapper = {git = "https://github.com/matter-labs/snark-wrapper.git", branch = "main"}
# snark_wrapper = {path = "../../snark_wrapper"}

circuit_encodings = {path = "../circuit_encodings"}

derivative = "*"
serde = {version = "1", features = ["derive"]}
crossbeam = "0.8"
seq-macro = "0.3.5"

[features]
default = []
log_tracing = ["circuit_encodings/log_tracing"]