[package]
name = "circuit_encodings"
version = "0.1.50"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: change to use matter-labs when everything is merged:
# zkevm_circuits = {git = "https://github.com/matter-labs/era-zkevm_circuits", branch = "dl-precompiles"}
zkevm_circuits = {git = "https://github.com/distributed-lab/era-zkevm_circuits", branch = "feature/bn254-circuits"}
# zkevm_circuits = {path = "../../era-zkevm_circuits"}

# TODO: change to use matter-labs when everything is merged:
# zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "dl-precompiles"}
zk_evm = {git = "https://github.com/distributed-lab/era-zk_evm.git", branch = "feature/ec-and-modexp-precompiles"}
# zk_evm = {path = "../../era-zk_evm"}


derivative = "*"
serde = {version = "1", features = ["derive"]}


[features]
default = []
log_tracing = ["zkevm_circuits/log_tracing"]
verbose_circuits = ["zkevm_circuits/verbose_circuits"]