[package]
name = "kzg"
version = "0.1.50"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
rayon = "*"
hex = "*"
once_cell = "1"
serde_with = {version = "1", features = ["hex"]}

# TODO: Once everything is merged, we should switch to the git version instead of local paths
# boojum = {git = "https://github.com/matter-labs/era-boojum", branch = "dl-precompiles"}
boojum = {path = "../../era-boojum"}

# zkevm_circuits = {git = "https://github.com/matter-labs/era-zkevm_circuits", branch = "dl-precompiles"}
zkevm_circuits = {path = "../../era-zkevm_circuits"}

[dev-dependencies]
rand = "0.4"

[features]
default = []